force-app/main/default/objects/Objection__c/Objection__c.object-meta.xml
<CustomObject>
    <description>One per objection raised in a lost intake&apos;s call (feature #73). Mined from the transcript and classified into a closed objection taxonomy.</description>
    <label>Objection</label>
    <nameField>
        <displayFormat>OBJ-{0000}</displayFormat>
        <label>Objection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>