force-app/main/default/objects/Objection__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denormalized link to the intake for easy reporting.</description>
    <label>Intake</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>Objections</relationshipLabel>
    <relationshipName>Objections</relationshipName>
    <type>Lookup</type>
</CustomField>