force-app/main/default/objects/Objection__c/fields/Loss_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Loss_Analysis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The loss analysis this objection belongs to.</description>
    <label>Loss Analysis</label>
    <referenceTo>Loss_Analysis__c</referenceTo>
    <relationshipLabel>Objections</relationshipLabel>
    <relationshipName>Objections</relationshipName>
    <type>Lookup</type>
</CustomField>