force-app/main/default/objects/Objection__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <description>Verbatim objection as raised by the prospect.</description>
    <label>Quote</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>